--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.2"
   },
   "devDependencies": {
