--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "TodoOrange",
-  "version": "0.0.1",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-code-push": "^8.1.0",
+    "react-native-config": "^1.5.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.2"
